styles.css
.header{
    color: white;
    background-color: #1F2937;
    font-size: 18px;
    font: #E5E7EB;
    padding: 20px 7%; 
    height: 500px;
    padding-bottom: 150px;
}

.top{
    display: flex;
    justify-content: space-between;
}

.title{
    color: #00bfff; 
    font-size: 30px; 
    padding: auto;
    margin: auto; 
    margin-left: 15px;
    font-style: normal;
}

.nav_links{
    color: white;
    background-color: #1F2937; 
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: flex-start; 
    margin-left: 50px;
    gap: 25px;
}

.nav_links li{
    display: inline-block;
}

a{
    text-decoration: none; 
    color: white; 
}

ul{
    list-style: none;
}

.left_main{
    color: white;
    background-color: #1F2937; 
    display: flex;
    flex-direction: row; 
    justify-content: center; 
    align-items: flex-start;
    margin-top: 175px;
    margin-left: 50px;
    padding: 10px;
    gap: 100px; 
    
}

.left_header{
    font: #f9faf8;
    font-size: 48px;
    margin-left: 50px;
}

.left_subtext{

    font: #E5E7EB;
    font-size: 18px;
    padding-top: 20px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap; 
}

.p{
    
    margin-right: 10px;
    padding-top: 0px;
    margin-bottom: 1px; 
}

.sign_up_button{
    background-color: #3882F6;
    border-color: #3882F6;
    color: #E5E7EB; 
    border-radius: 5px;
    padding: 8px 2%;
    box-shadow: 0 1.5px 2.5px 0; 
    width: 22%; 
    margin: 20px 5%; 
    margin-left: 0px;
}

.penguin_photo_right{  
    margin-right: 170px;
}

.middle_header{
    margin: 40px;
    margin-left: 80px;
    gap: 50px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
}


.middle_header_text{
    font-size: 36px;
    font-weight: bold;
    font: #1F2937; 
    text-align: center;
   
} 

.break
{
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 15px;
    gap: 10px;
    margin-bottom: 50px;
}

.card{ 
    margin: 16px;
    transition: 0.3s; 
    display: flex;
    flex-direction: column;
    justify-content: center;    
}

.penguin_in_cards img{
    
    width: 200px;
    height: 200px; 
    object-fit: cover;
    border: 4px solid #3882F6;
    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
    border-radius: 15px;
    margin: 5px 20px 0px 20px;    
}

p{
    display: flex;
    flex-direction: row;
    justify-content: center;
}


.inspiring_quote{
    background-color: #E5E7EB;
    font-style: italic;
    font-size: 34px; 
    font : #1F2937; 
    width: auto;
    height: 200px; 
    padding: 1%;
}

.penguin_colony{

    font-size: 20px;
    font-weight: bold;
    font: #1F2937; 
    font-style:normal;
    display: inline-block;
    padding-left: 1480px; 
}


.inspiring_text{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap; 
    margin-left: 50px;
    padding: 10px 8.4%;
    padding-top: 50px;
    gap: 0px; 
}


.bottom_sign{
    background-color: #3882F6;
    margin: 50px;
    padding: 25px 8.4%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    max-width: auto;
}

.bottom_text{
    color: #F9FAF8;  
}

.call_to_action{
    font-weight: bold;
    font-size: 20px;
    display: flex;
    margin-left: 30px;
}

.sign_up_for{
    font-size: 15px;
    margin-left: 30px;
}

.bottom_button{
    
    padding: .5% 1%;
    margin: 0px 400px; 
    box-shadow: 0 4px 8px 0;
    border-radius: 10px;
    background-color: #3882F6;
    border-color: #F9FAF8;
    color: #F9FAF8; 
    min-width: 80px;

}

.footer{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-end;
    padding: 22px;
    background-color: #1F2937;
    color: white;
}

